src/amount-grammar.txt
literal: "all" | "all!" | "infinity" //these are all identifiers

special-literal: IDENT //provided at runtime can be mapped to any function that returns a number

function: IDENT "(" expr(","expr)* ")"

var-access: IDENT

atom: number | function | literal | special-literal | string | var-access

right-unary-op: % | # | "k" | "m" | "b" | "t"
left-unary-op: # | -

factor: atom | LPAREN expr RPAREN

mutate-expr: factor
           : (left-unary-op)* mutate-expr (right-unary-op)*

higher-order-term: mutate-expr ((POW) mutate-expr)*

term: higher-order-term ((MUL | DIV) higher-order-term)*

arithmetic: term ((PLUS| MINUS) term)*

root: arithmetic ((ROOT) arithmetic)*

var-assign: "var" (IDENT "=" expr | IDENT LPAREN ((IDNET ("," IDENT)*)*) RPAREN "=" code "end")

expr: root | var-assign

program: expr (SEMI expr)*
